--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@ body {
   place-content: center;
 }
 
+textarea {
+  font-family: inherit;
+  margin-bottom: 8px;
+  padding-left: 5px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -44,5 +50,5 @@ form input {
   border: 1px solid #ccc;
   border-radius: 2px;
   padding: 4px 6px;
-  margin: 0px 4px;
+  margin: 0px 0px 4px;
 }
